Fix style of button on mobile view

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -111,15 +111,22 @@ input[type='file'] {
   padding: 0.5rem 0 0.5rem 0.5rem;
 }
 
-.add-btn a {
-  border: 1px solid white;
+.inner-btn a {
   color: white;
-  padding: 0.5rem 4.5rem;
 }
 
-@media (min-width: 375px) {
+.inner-btn {
+  border: 1px solid white;
+  padding: 0.3rem;
+  height: 2.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+@media (min-width: 280px) {
   .add-btn a {
-    padding: 0.5rem 6.3rem;
+    padding: 0.5rem 1rem;
   }
 }
 
